apps/sportif/service-ai.yaml
apiVersion: v1
kind: Service
metadata:
  name: sportif-tracking-worker-service
  namespace: sports-tracking
spec:
  type: ClusterIP
  selector:
    app: sportif-tracking-worker
  ports:
    - name: http-api
      protocol: TCP
      port: 8000
      targetPort: 8000
