apps/sportif/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sportif-media-ingest-service
  namespace: sports-tracking
  labels:
    app: sportif-media-ingest
spec:
  type: ClusterIP
  selector:
    app: sportif-media-ingest
  ports:
    - name: rtmp
      port: 1935
      targetPort: 1935
      protocol: TCP
    - name: http-api
      port: 1985
      targetPort: 1985
      protocol: TCP
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sportif-preview-streamer-service
  namespace: sports-tracking
  labels:
    app: sportif-preview-streamer
spec:
  type: ClusterIP
  selector:
    app: sportif-preview-streamer
  ports:
    - name: rtsp
      port: 8554
      targetPort: 8554
      protocol: TCP
    - name: rtsps
      port: 8555
      targetPort: 8555
      protocol: TCP
    - name: rtmp
      port: 1936
      targetPort: 1936
      protocol: TCP
    - name: rtmps
      port: 1937
      targetPort: 1937
      protocol: TCP
    - name: webrtc
      port: 8889
      targetPort: 8889
      protocol: TCP
    - name: http
      port: 9998
      targetPort: 9998
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sportif-recorder-worker-service
  namespace: sports-tracking
  labels:
    app: sportif-recorder-worker
spec:
  type: ClusterIP
  selector:
    app: sportif-recorder-worker
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sportif-reel-worker-service
  namespace: sports-tracking
  labels:
    app: sportif-reel-worker
spec:
  type: ClusterIP
  selector:
    app: sportif-reel-worker
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sportif-stitch-worker-service
  namespace: sports-tracking
  labels:
    app: sportif-stitch-worker
spec:
  type: ClusterIP
  selector:
    app: sportif-stitch-worker
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sportif-tracking-worker-service
  namespace: sports-tracking
  labels:
    app: sportif-tracking-worker
spec:
  type: ClusterIP
  selector:
    app: sportif-tracking-worker
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
