apps/sportif/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportif-ingress
  namespace: sports-tracking
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "4G"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/websocket-services: "sportif-preview-streamer-service"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "Upgrade";
spec:
  tls:
    - hosts:
        - sportif.churchlify.com
      secretName: sportif-tls
  rules:
    - host: sportif.churchlify.com
      http:
        paths:
          - path: /crop-x(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sportif-tracking-worker-service
                port:
                  number: 8000
          - path: /preview(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sportif-preview-streamer-service
                port:
                  number: 8889
          - path: /reels(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sportif-reel-worker-service
                port:
                  number: 8000
